# gmaker

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DESIGN.md  DESIGN_REVIEW.md  IMPLEMENTATION.md  Makefile  README.md  biz.json  build.bat  build.ps1  go.sum  server_broadcast.err
.github/workflows/: ci.yml
common/cpp/crypto/: hmac.cpp  hmac.hpp  session.cpp  session.hpp  test.cpp
common/cpp/discovery/: etcd_impl.cpp  registry_impl.cpp  registry_impl.hpp  upstream_manager.cpp
common/cpp/errors/: errors.hpp
common/cpp/gs/: errors.hpp
common/cpp/gs/config/: config.cpp  config.hpp  json_parser.hpp
common/cpp/gs/crypto/: aes_gcm.cpp  aes_gcm.hpp  hmac.cpp  hmac.hpp  session.cpp  session.hpp
common/cpp/gs/discovery/: etcd_impl.hpp  factory.cpp  factory.hpp  interface.hpp  node.hpp  upstream_manager.hpp
common/cpp/gs/idgen/: snowflake.cpp  snowflake.hpp
common/cpp/gs/limiter/: token_bucket.cpp  token_bucket.hpp
common/cpp/gs/logger/: logger.hpp
common/cpp/gs/metrics/: metrics.cpp
common/cpp/gs/net/: address.hpp  async_event_loop.hpp  buffer.hpp  coalescer.cpp  coalescer.hpp  iconnection.hpp  middleware.hpp  packet.hpp  tcp_client.cpp  tcp_client.hpp  tcp_conn.cpp  tcp_conn.hpp  tcp_server.cpp  tcp_server.hpp  thread_pool.cpp  thread_pool.hpp  upstream.cpp  upstream.hpp
common/cpp/gs/realtime/: aoi.hpp  compute_thread.cpp  compute_thread.hpp  message.hpp  room.cpp
common/cpp/gs/redis/: redis_client.cpp  redis_client.hpp  test.cpp
common/cpp/gs/registry/: client.cpp  client.hpp  upstream_manager.cpp  upstream_manager.hpp
common/cpp/gs/replay/: replay.cpp
common/cpp/gs/rpc/: client.cpp  client.hpp
common/cpp/limiter/: token_bucket.cpp
common/cpp/logger/: logger.hpp
common/cpp/metrics/: metrics.hpp
common/cpp/net/: buffer.cpp  iconnection.hpp  middleware.hpp  packet.hpp  ring_buffer.cpp  ring_buffer.hpp
common/cpp/net/async/: event_loop.cpp  event_loop.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_listener.cpp  test.cpp  upstream.cpp  ws_connection.cpp  ws_connection.hpp  ws_frame.hpp  ws_server.cpp
common/cpp/realtime/: aoi.cpp  compute_thread.cpp  compute_thread.hpp  message.hpp  room.hpp
common/cpp/redis/: config.hpp  redis_client.cpp  redis_client.hpp  test.cpp
common/cpp/registry/: client.cpp  client.hpp
common/cpp/replay/: replay.hpp
common/cpp/rpc/: client.cpp
common/go/cache/: cache.go  codec.go  redis_store.go  store.go
common/go/config/: config.go  config_test.go  etcd.go  loader.go
common/go/crypto/: aes_gcm.go  argon2id.go  crypto_test.go  hmac.go  session.go  session_test.go
common/go/discovery/: etcd_impl.go  factory.go  interface.go  registry_impl.go  upstream_manager.go
common/go/errors/: error.go  errors.go
common/go/idgen/: snowflake.go
common/go/limiter/: circuit_breaker.go  circuit_breaker_test.go  token_bucket.go  token_bucket_test.go
common/go/lock/: redis_lock.go  redis_lock_test.go
common/go/logger/: logger.go
common/go/metrics/: metrics.go
common/go/net/: client.go  conn.go  packet.go  sender.go  server.go  upstream.go
common/go/redis/: client.go  config.go  hotkey.go
common/go/registry/: client.go  upstream_manager.go
common/go/replay/: replay.go  replay_test.go
common/go/rpc/: client.go
common/go/trace/: trace.go
conf/: biz.json  bot.json  chat.json  dbproxy.json  gateway.json  login.json
docs/: AGENTS.md  DESIGN.md  DESIGN_REVIEW.md  IMPLEMENTATION.md  engineering-assessment.md  seckill-design.md  single-device-login.md
proto/: protocol.proto
scripts/: _init-logs.bat  gen-proto.bat  gen-proto.ps1  init-db.sql  run-phase1.bat  run-phase2.bat  setup-deps.bat  start-biz.bat  start-dbproxy.bat  start-full.bat  start-gateway.bat  start-logstats.bat  start-minimal.bat  start-registry.bat  start-services.ps1  start-testclient.bat  start.bat  stop-all.bat  stop-services.ps1  test-chat.bat  test-chat.ps1  test-mysql.bat  test-redis.bat  test-registry.go  test-websocket.bat  test-ws-chat.bat
services/biz-go/: Dockerfile  biz.json  go.sum  main.go
services/biz-go/internal/dbproxy/: client.go
services/biz-go/internal/handler/: handler.go
services/biz-go/internal/service/: player.go
services/bot-go/: bot.json  go.sum  main.go
services/bot-go/internal/api/: http.go
services/bot-go/internal/bot/: client.go  manager.go  ws_client.go
services/bot-go/internal/dbproxy/: client.go
services/chat-go/: chat.json  go.sum  main.go
services/chat-go/internal/chat/: service.go
services/dbproxy-go/: Dockerfile  go.sum  main.go
services/dbproxy-go/internal/limiter/: hotkey.go
services/dbproxy-go/internal/mysql/: proxy.go
services/dbproxy-go/internal/redis/: proxy.go
services/dbproxy-go/internal/server/: server.go
services/gateway-cpp/: Dockerfile  gateway.json  gateway_config.cpp  gateway_config.hpp  main.cpp
services/login-go/: main.go
services/login-go/internal/dbproxy/: client.go
services/login-go/internal/handler/: http.go
services/login-go/internal/service/: account.go  player.go
services/logstats-go/: Dockerfile  main.go
services/realtime-cpp/: Dockerfile  main.cpp
services/registry-go/: Dockerfile  go.sum  main.go  registry.json
services/registry-go/internal/server/: server.go
spec/: README.md  cmd_ids.yaml  errors.toml  rpc_spec.yaml
spec/proto/: biz.proto  chat.proto  common.proto  dbproxy.proto  login.proto  packet.proto  protocol.proto  registry.proto
tests/perf/: net_perf.cpp  net_perf_client.cpp  net_perf_server.cpp
tests/phase1/: main.go
tests/phase2/: main.go
tools/deploy/: docker-compose.yml  gateway.json
tools/deploy-gen/: deploy.json  generate.py
tools/deploy/grafana/: dashboard.json  prometheus.yml
tools/deploy/mysql/: docker-compose.yml
tools/deploy/redis/: README.md  docker-compose.yml  init-cluster.sh
tools/gen-errors/: main.go
tools/init-bots/: main.go
tools/init-db/: main.go
tools/test-mysql/: main.go
tools/test-redis/: main.go
tools/testclient/: client.go  main.go  reporter.go  scenario.go  stats.go  ws_client.go
web/: index.html
web/css/: style.css
web/js/: chat.js  net.js
(+28 files in other folders)
